--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AutoMate- Portal for automatiske opgaver</title>
-    <meta name="description" content="AutoMate - Professionel platform for automatiske opgaver med elegante assistenter til email, test og manuel processer" />
+    <title>AutoMate- Portal for automatiserede agenter og værktøjer</title>
+    <meta name="description" content="AutoMate - Professionel platform for automatiske AI-agenter og værktøjer" />
     <meta name="author" content="AutoMate Team" />
 
-    <meta property="og:title" content="Auto<i>Mate</i> - Portal for automatiske opgaver" />
-    <meta property="og:description" content="AutoMate - Professionel platform for automatiske opgaver med elegante assistenter til email, test og manuel processer" />
+    <meta property="og:title" content="Auto<i>Mate</i> - Portal for automatiserede agenter og værktøjer" />
+    <meta property="og:description" content="AutoMate - Platform for automatiske værktøjer baseret på agentiske workflows" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="/android-chrome-512x512.png" />
 
